Fix crash when sending OSC 4 (RGB) color outside the 256 range

BUG:494205